--- a/index.html
+++ b/index.html
@@ -1,21 +1,46 @@
 <!doctype html>
 <html>
-  <head>
-    <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css">
-    <link href="css/bootstrap-glyphicons.css" rel="stylesheet" type="text/css">
-    <link href="css/app.css" rel="stylesheet" type="text/css">
-    <script src="js/jquery-1.10.2.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <script src="js/live.js"></script>
-    <script src="js/app.js"></script>
-  </head>
-  <body>
-    <div class="jumbotron masthead">
-      <div class="container">
-        <h1 class="thin-font">Pattern for web application</h1>
-        <p>A quick way to start a web app</p>
-        <p>by me</p>
-      </div>
-    </div>
-  </body>
+	<head>
+		<link href="css/bootstrap.min.css" rel="stylesheet" type="text/css">
+		<link href="css/bootstrap-glyphicons.css" rel="stylesheet" type="text/css">
+		<link href="css/app.css" rel="stylesheet" type="text/css">
+		<script src="js/jquery-1.10.2.min.js"></script>
+		<script src="js/bootstrap.min.js"></script>
+		<script src="js/live.js"></script>
+		<script src="js/app.js"></script>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+	</head>
+	<body>
+		<header class="navbar navbar-inverse navbar-fixed-top" role="banner">
+			<div class="container">
+				<div class="navbar-header">
+					<button class="navbar-toggle" type="button" data-toggle="collapse" data-target=".bs-navbar-collapse">
+						<span class="sr-only">Toggle navigation</span>
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+					</button>
+					<a href="#" class="navbar-brand">500px uploader</a>
+				</div>
+				<nav class="collapse navbar-collapse" role="navigation">
+					<ul class="nav navbar-nav">
+						<li>
+							<a href="/photo.html">Photo</a>
+						</li>
+						<li>
+							<a href="/about.html">About</a>
+						</li>
+					</ul>
+				</nav>
+			</div>
+		</header>
+		
+		<div class="jumbotron masthead">
+			<div class="container">
+				<h1 class="thin-font">Pattern for web application</h1>
+				<p>A quick way to start a web app</p>
+				<p>by me</p>
+			</div>
+		</div>
+	</body>
 </html>
