--- a/index.html
+++ b/index.html
@@ -6,41 +6,86 @@
 		<link href="css/app.css" rel="stylesheet" type="text/css">
 		<script src="js/jquery-1.10.2.min.js"></script>
 		<script src="js/bootstrap.min.js"></script>
-		<script src="js/live.js"></script>
+		<!--script src="js/live.js"></script-->
 		<script src="js/app.js"></script>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 	</head>
 	<body>
-		<header class="navbar navbar-inverse navbar-fixed-top" role="banner">
+		<!-- Header -->
+		<div class="navbar navbar-inverse navbar-fixed-top">
 			<div class="container">
 				<div class="navbar-header">
-					<button class="navbar-toggle" type="button" data-toggle="collapse" data-target=".bs-navbar-collapse">
-						<span class="sr-only">Toggle navigation</span>
+					<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
 					</button>
-					<a href="#" class="navbar-brand">500px uploader</a>
+					<a class="navbar-brand" href="#"><strong>500px uploader</strong></a>
 				</div>
-				<nav class="collapse navbar-collapse" role="navigation">
+				<div class="navbar-collapse collapse">
 					<ul class="nav navbar-nav">
-						<li>
-							<a href="/photo.html">Photo</a>
-						</li>
-						<li>
-							<a href="/about.html">About</a>
-						</li>
+						<li><a href="#">Uploaded photos</a></li>
+						<li><a href="#about">About</a></li>
 					</ul>
-				</nav>
+				</div>
 			</div>
-		</header>
+		</div>
 		
-		<div class="jumbotron masthead">
-			<div class="container">
-				<h1 class="thin-font">Pattern for web application</h1>
-				<p>A quick way to start a web app</p>
-				<p>by me</p>
+		<!-- Drag zone -->
+		<div class="container text-center start-zone block-hide">
+			<p>Drag photos from your computer in here. Select as many as you want.</p>
+			<div class="help-block">You can kill your browser with dropping 10 files in a row with 10MB each though</div>
+			<p>You can also <a class="browse_files" href="#">browse</a> for photos to upload.</p>
+		</div>	
+
+		<!-- Preview zone -->
+		<div class="container preview-zone block-hide">
+			<img src="img/demo.jpg" height="754"/>
+		</div>
+
+		<!-- Thumbnail zone -->
+		<div class="container thumbnail-zone">
+			<div class="row">
+				<div class="thumbnails-holder col-md-9">
+					<a href="#" class="upload-thumbnail active">
+						<img src="img/demo.jpg" width="64" height="64"/>
+					</a>
+					<a href="#" class="upload-thumbnail">
+						<img src="img/preview.png" width="64" height="64"/>
+					</a>
+				</div>
+
+				<div class="actions col-md-3 text-right">
+					<button type="button" class="btn btn-danger">remove</button>
+					<button type="button" class="btn btn-success">save</button>
+					<button type="button" class="btn btn-primary">upload</button>
+					<p class="help-block">1/2 photos are ready</p>
+				</div>
 			</div>
+		</div>
+
+		<!-- Edit zone -->
+		<div class="container edit-zone">
+			<form role="form">
+				<div class="row">
+					<div class="form-group col-md-7">
+						<label for="photo[title]" class="label-main">TITLE</label>
+						<input type="text" class="form-control photo-title instant-edit" id="photo[title]" placeholder="Untitled Image">
+					</div>
+				</div>
+				<div class="row">
+					<div class="col-md-3">
+						<label class="label-main">EXIF DATA</label>
+					</div>
+					<div class="col-md-4">
+						<label class="label-main">DESCRIPTION</label>
+					</div>
+					<div class="col-md-5">
+						<label class="label-main">MAP</label>
+					</div>
+
+				</div>
+			</form>
 		</div>
 	</body>
 </html>
