--- a/index.html
+++ b/index.html
@@ -2,11 +2,10 @@
 <html>
 	<head>
 		<link href="css/bootstrap.min.css" rel="stylesheet" type="text/css">
-		<link href="css/bootstrap-glyphicons.css" rel="stylesheet" type="text/css">
 		<link href="css/app.css" rel="stylesheet" type="text/css">
 		<script src="js/jquery-1.10.2.min.js"></script>
 		<script src="js/bootstrap.min.js"></script>
-		<!--script src="js/live.js"></script-->
+		<script src="js/live.js"></script>
 		<script src="js/app.js"></script>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 	</head>
@@ -32,60 +31,254 @@
 		</div>
 		
 		<!-- Drag zone -->
-		<div class="container text-center start-zone block-hide">
+		<div class="container text-center start-zone">
 			<p>Drag photos from your computer in here. Select as many as you want.</p>
-			<div class="help-block">You can kill your browser with dropping 10 files in a row with 10MB each though</div>
+			<div class="help-block">You can kill your browser with dropping 10 files in a row with 10MB each though (o.O)</div>
 			<p>You can also <a class="browse_files" href="#">browse</a> for photos to upload.</p>
 		</div>	
 
 		<!-- Preview zone -->
-		<div class="container preview-zone block-hide">
+		<div class="container preview-zone">
 			<img src="img/demo.jpg" height="754"/>
 		</div>
 
 		<!-- Thumbnail zone -->
 		<div class="container thumbnail-zone">
 			<div class="row">
-				<div class="thumbnails-holder col-md-9">
-					<a href="#" class="upload-thumbnail active">
-						<img src="img/demo.jpg" width="64" height="64"/>
-					</a>
-					<a href="#" class="upload-thumbnail">
-						<img src="img/preview.png" width="64" height="64"/>
-					</a>
-				</div>
+        <div class="col-md-9">
+  				<ul class="thumbnails-holder nav nav-tabs" id="myTab">
+            <li class="active">
+              <a href="#photo-1" class="upload-thumbnail">
+      					<img src="img/demo.jpg" width="64" height="64"/>
+      				</a>
+            </li>
+            <li>
+     					<a href="#photo-2" class="upload-thumbnail">
+     						<img src="img/preview.png" width="64" height="64"/>
+     					</a>
+            </li>
+  				</ul>
+        </div>
 
 				<div class="actions col-md-3 text-right">
-					<button type="button" class="btn btn-danger">remove</button>
-					<button type="button" class="btn btn-success">save</button>
-					<button type="button" class="btn btn-primary">upload</button>
+					<button type="button" class="btn btn-danger"><i class="glyphicon glyphicon-trash"></i>remove</button>
+					<button type="button" class="btn btn-success"><i class="glyphicon glyphicon-floppy-disk"></i>save</button>
+					<button type="button" class="btn btn-primary"><i class="glyphicon glyphicon-open"></i>upload</button>
 					<p class="help-block">1/2 photos are ready</p>
 				</div>
 			</div>
 		</div>
 
 		<!-- Edit zone -->
-		<div class="container edit-zone">
-			<form role="form">
-				<div class="row">
-					<div class="form-group col-md-7">
-						<label for="photo[title]" class="label-main">TITLE</label>
-						<input type="text" class="form-control photo-title instant-edit" id="photo[title]" placeholder="Untitled Image">
-					</div>
-				</div>
-				<div class="row">
-					<div class="col-md-3">
-						<label class="label-main">EXIF DATA</label>
-					</div>
-					<div class="col-md-4">
-						<label class="label-main">DESCRIPTION</label>
-					</div>
-					<div class="col-md-5">
-						<label class="label-main">MAP</label>
-					</div>
+    <div class="container-fluid tab-content">
+  		<div class="container edit-zone tab-pane active" id="photo-1">
+  			<form role="form">
+  				<div class="row">
+  					<div class="form-group col-md-8">
+  						<label for="photo[title]" class="label-main">TITLE</label>
+  						<input type="text" class="form-control photo-title instant-edit" id="photo[title]" placeholder="Untitled Image 1">
+  					</div>
+  				</div>
+  				<div class="row">
+  					<div class="col-md-4 exif">
+  						<label class="label-main">EXIF DATA</label>
 
-				</div>
-			</form>
-		</div>
+              <div class="row">
+                <label class="col-md-5 control-label">Camera</label>
+                <input type="text" class="col-md-7 input-sm instant-edit" id="photo[exif][camera]" placeholder="Set Camera"/>
+              </div>
+
+              <div class="row">
+                <label class="col-md-5 control-label">Lens</label>
+                <input type="text" class="col-md-7 input-sm instant-edit" id="photo[exif][lens]" placeholder="Set Lens"/>
+              </div>
+
+              <div class="row">
+                <label class="col-md-5 control-label">Focal Length</label>
+                <input type="text" class="col-md-7 input-sm instant-edit" id="photo[exif][focalLength]" placeholder="Set Focal Length"/>
+              </div>
+
+              <div class="row">
+                <label class="col-md-5 control-label">Shutter Speed</label>
+                <input type="text" class="col-md-7 input-sm instant-edit" id="photo[exif][shutterspeed]" placeholder="Set Shutter Speed"/>
+              </div>
+
+              <div class="row">
+                <label class="col-md-5 control-label">Aperture</label>
+                <input type="text" class="col-md-7 input-sm instant-edit" id="photo[exif][aperture]" placeholder="Set Aperture"/>
+              </div>
+
+              <div class="row">
+                <label class="col-md-5 control-label">ISO</label>
+                <input type="text" class="col-md-7 input-sm instant-edit" id="photo[exif][iso]" placeholder="Set ISO"/>
+              </div>
+
+              <div class="row">
+                <label class="col-md-5 control-label">Taken</label>
+                <input type="text" class="col-md-7 input-sm instant-edit" id="photo[exif][taken]" placeholder="Set Date (dd/mm/yy)"/>
+              </div>
+
+              <div class="form-group">
+                <label class="label-main">CATEGORY</label>
+                <select class="form-control" name="photo[category]">
+                  <option>Uncategorized</option>
+                  <option value="1">Art</option>
+                  <option value="2">Natural</option>
+                  <option value="3">People</option>
+                  <option value="4">Fashion</option>
+                  <option value="5">Wedding</option>
+                </select>
+              </div>
+
+              <div class="form-group">
+                <label class="label-main">PLACE PHOTO IN</label>
+                <select class="form-control" name="photo[privacy]">
+                  <option value="1">Profile (public)</option>
+                  <option value="2">Private</option>
+                </select>
+              </div>
+
+  					</div>
+  					<div class="col-md-4">
+              <div class="form-group">
+  						  <label class="label-main">DESCRIPTION</label>
+                <textarea name="photo[description]" class="form-control" rows="7"></textarea>
+              </div>
+
+              <div class="form-group">
+                <label class="label-main">LICENSE</label>
+                <select class="form-control" name="photo[license]">
+                  <option value="1">Fun</option>
+                  <option value="2">Happy</option>
+                </select>
+              </div>
+
+              <div class="form-group">
+                <label class="label-main">TAGS</label>
+                <input type="text" class="form-control" id="photo[tags]" placeholder="Tag to make your photo easier to find..."/>
+              </div>
+
+  					</div>
+  					<div class="col-md-4">
+  						<label class="label-main">MAP</label>
+              <div class="map-canvas">
+                <img src="http://placehold.it/360x240&text=Googlemap"/>
+              </div>
+
+  					</div>
+
+  				</div>
+  			</form>
+  		</div>
+
+      <div class="container edit-zone tab-pane" id="photo-2">
+        <form role="form">
+          <div class="row">
+            <div class="form-group col-md-8">
+              <label for="photo[title]" class="label-main">TITLE</label>
+              <input type="text" class="form-control photo-title instant-edit" id="photo[title]" placeholder="Untitled Image 2">
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-md-4 exif">
+              <label class="label-main">EXIF DATA</label>
+
+              <div class="row">
+                <label class="col-md-5 control-label">Camera</label>
+                <input type="text" class="col-md-7 input-sm instant-edit" id="photo[exif][camera]" placeholder="Set Camera"/>
+              </div>
+
+              <div class="row">
+                <label class="col-md-5 control-label">Lens</label>
+                <input type="text" class="col-md-7 input-sm instant-edit" id="photo[exif][lens]" placeholder="Set Lens"/>
+              </div>
+
+              <div class="row">
+                <label class="col-md-5 control-label">Focal Length</label>
+                <input type="text" class="col-md-7 input-sm instant-edit" id="photo[exif][focalLength]" placeholder="Set Focal Length"/>
+              </div>
+
+              <div class="row">
+                <label class="col-md-5 control-label">Shutter Speed</label>
+                <input type="text" class="col-md-7 input-sm instant-edit" id="photo[exif][shutterspeed]" placeholder="Set Shutter Speed"/>
+              </div>
+
+              <div class="row">
+                <label class="col-md-5 control-label">Aperture</label>
+                <input type="text" class="col-md-7 input-sm instant-edit" id="photo[exif][aperture]" placeholder="Set Aperture"/>
+              </div>
+
+              <div class="row">
+                <label class="col-md-5 control-label">ISO</label>
+                <input type="text" class="col-md-7 input-sm instant-edit" id="photo[exif][iso]" placeholder="Set ISO"/>
+              </div>
+
+              <div class="row">
+                <label class="col-md-5 control-label">Taken</label>
+                <input type="text" class="col-md-7 input-sm instant-edit" id="photo[exif][taken]" placeholder="Set Date (dd/mm/yy)"/>
+              </div>
+
+              <div class="form-group">
+                <label class="label-main">CATEGORY</label>
+                <select class="form-control" name="photo[category]">
+                  <option>Uncategorized</option>
+                  <option value="1">Art</option>
+                  <option value="2">Natural</option>
+                  <option value="3">People</option>
+                  <option value="4">Fashion</option>
+                  <option value="5">Wedding</option>
+                </select>
+              </div>
+
+              <div class="form-group">
+                <label class="label-main">PLACE PHOTO IN</label>
+                <select class="form-control" name="photo[privacy]">
+                  <option value="1">Profile (public)</option>
+                  <option value="2">Private</option>
+                </select>
+              </div>
+
+            </div>
+            <div class="col-md-4">
+              <div class="form-group">
+                <label class="label-main">DESCRIPTION</label>
+                <textarea name="photo[description]" class="form-control" rows="7"></textarea>
+              </div>
+
+              <div class="form-group">
+                <label class="label-main">LICENSE</label>
+                <select class="form-control" name="photo[license]">
+                  <option value="1">Fun</option>
+                  <option value="2">Happy</option>
+                </select>
+              </div>
+
+              <div class="form-group">
+                <label class="label-main">TAGS</label>
+                <input type="text" class="form-control" id="photo[tags]" placeholder="Tag to make your photo easier to find..."/>
+              </div>
+
+            </div>
+            <div class="col-md-4">
+              <label class="label-main">MAP</label>
+              <div class="map-canvas">
+                <img src="http://placehold.it/360x240&text=Googlemap"
+              </div>
+
+            </div>
+
+          </div>
+        </form>
+      </div>
+    </div>
+
+    <script>
+      $(function () {
+        $('#myTab a').click(function (e) {
+          e.preventDefault()
+          $(this).tab('show')
+        })
+      })
+    </script>
 	</body>
 </html>
