--- a/uploaded.html
+++ b/uploaded.html
@@ -39,32 +39,6 @@
 			</form>
 		</div>	
 
-		<div class="uploader block-hide">
-			<!-- Preview zone -->
-			<div class="container preview-zone">
-				<img src="img/mask-tran.png"/>
-			</div>
-
-			<!-- Thumbnail zone -->
-			<div class="container thumbnail-zone">
-				<div class="row">
-					<div class="col-md-9">
-						<ul class="thumbnails-holder nav nav-tabs" id="myTab"></ul>
-					</div>
-
-					<div class="actions col-md-3 text-right">
-						<button type="button" class="btn btn-danger btn-remove"><i class="glyphicon glyphicon-trash"></i> remove</button>
-						<!-- <button type="button" class="btn btn-success"><i class="glyphicon glyphicon-floppy-disk"></i> save</button> -->
-						<button type="button" class="btn btn-primary btn-upload"><i class="glyphicon glyphicon-open"></i> upload</button>
-						<p class="help-block"><span class="readyphoto"></span>/<span class="totalphoto"></span> photos are ready</p>
-					</div>
-				</div>
-			</div>
-
-			<!-- Edit zone -->
-			<div class="container-fluid tab-content edit-zone-holder"></div>
-
-		</div>
 
 		<script type="text/x-tmpl" id="tmpl-uploadThumbnail">
 			<li class="{%=o.active?'active':'' %}">
@@ -75,155 +49,13 @@
 			</li>
 		</script>
 
-		<script type="text/x-tmpl" id="tmpl-uploadEditor">
-			<div class="container edit-zone tab-pane {%= o.active?'active':''%}" id="photo-{%=o.count%}" data-cid="{%=o.count %}">
-				<form role="form">
-					<div class="row">
-						<div class="form-group col-md-8">
-							<label for="photo[title]" class="label-main">TITLE</label>
-							<input type="text" class="form-control photo-title instant-edit input-lg" id="photo[title]" placeholder="Untitled Image" value="{%=o.title.replace(/\.\w{3,4}$/gi, '')%}">
-						</div>
-					</div>
-					<div class="row">
-						<div class="col-md-4 exif">
-							<label class="label-main">EXIF DATA</label>
-
-							<div class="row">
-								<label class="col-md-5 control-label">Camera</label>
-								<input type="text" class="col-md-7 input-sm instant-edit" id="photo[exif][camera]" placeholder="Set Camera" value="{%=o.Model?o.Model:''%}"/>
-							</div>
-
-							<div class="row">
-								<label class="col-md-5 control-label">Lens</label>
-								<input type="text" class="col-md-7 input-sm instant-edit" id="photo[exif][lens]" placeholder="Set Lens"/>
-							</div>
-
-							<div class="row">
-								<label class="col-md-5 control-label">Focal Length</label>
-								<input type="text" class="col-md-7 input-sm instant-edit" id="photo[exif][focalLength]" placeholder="Set Focal Length" value="{%=o.FocalLength?(o.FocalLength + 'mm'):''%}"/>
-							</div>
-
-							<div class="row">
-								<label class="col-md-5 control-label">Shutter Speed</label>
-								{% 
-                  var shutterSpeed = '';
-                  if (o.ExposureTime){
-                    if (o.ExposureTime < 1){
-                      shutterSpeed = '1/' + Math.round(1/o.ExposureTime);
-                    } else{
-                      shutterSpeed = o.ExposureTime;
-                    }
-                  } 
-                %}
-								<input type="text" class="col-md-7 input-sm instant-edit" id="photo[exif][shutterspeed]" placeholder="Set Shutter Speed" value="{%= shutterSpeed %}"/>
-							</div>
-
-							<div class="row">
-								<label class="col-md-5 control-label">Aperture</label>
-								<input type="text" class="col-md-7 input-sm instant-edit" id="photo[exif][aperture]" placeholder="Set Aperture" value="{%=o.FNumber?('F' + o.FNumber):''%}"/>
-							</div>
-
-							<div class="row">
-								<label class="col-md-5 control-label">ISO</label>
-								<input type="text" class="col-md-7 input-sm instant-edit" id="photo[exif][iso]" placeholder="Set ISO" value="{%=o.ISOSpeedRatings?o.ISOSpeedRatings:''%}"/>
-							</div>
-
-							<div class="row">
-								<label class="col-md-5 control-label">Taken</label>
-								{%
-		              if (o.DateTimeOriginal){
-		                var time = o.DateTimeOriginal;
-		                time = time.split(' ');
-		                odate = time[0].replace(/\:/gi, '-');
-		                otime = time[1].substring(0, 5);
-		              }
-		            %}
-								<input type="text" class="col-md-7 input-sm instant-edit" id="photo[exif][taken]" placeholder="Set Date (dd/mm/yy)" value="{%=o.DateTimeOriginal?odate:''%} {%=o.DateTimeOriginal?otime:''%}"/>
-							</div>
-
-							<div class="form-group">
-								<label class="label-main">CATEGORY</label>
-								<select class="form-control" name="photo[category]">
-									<option>Uncategorized</option>
-									<option value="1">Art</option>
-									<option value="2">Natural</option>
-									<option value="3">People</option>
-									<option value="4">Fashion</option>
-									<option value="5">Wedding</option>
-								</select>
-							</div>
-
-							<div class="form-group">
-								<label class="label-main">PLACE PHOTO IN</label>
-								<select class="form-control" name="photo[privacy]">
-									<option value="1">Profile (public)</option>
-									<option value="2">Private</option>
-								</select>
-							</div>
-
-						</div>
-						<div class="col-md-4">
-							<div class="form-group">
-								<label class="label-main">DESCRIPTION</label>
-								<textarea name="photo[description]" class="form-control" rows="7"></textarea>
-							</div>
-
-							<div class="form-group">
-								<label class="label-main">LICENSE</label>
-								<select class="form-control" name="photo[license]">
-									<option value="1">Fun</option>
-									<option value="2">Happy</option>
-								</select>
-							</div>
-
-							<div class="form-group">
-								<label class="label-main">TAGS</label>
-								<input type="text" class="form-control" id="photo[tags]" placeholder="Tag to make your photo easier to find..."/>
-							</div>
-
-						</div>
-						<div class="col-md-4">
-							<label class="label-main">MAP</label>
-							<div class="map">
-								<div class="map-canvas">
-									<img src="http://placehold.it/360x240&text=Googlemap"/>
-								</div>
-								<input type="text" class="form-control map-search" placeholder="Search for location..."/>
-			          <input type="hidden" class="photoLat" name="photo[latitude]" value="{%=o.GPSLatitude?o.GPSLatitude:''%}"/>
-			          <input type="hidden" class="photoLon" name="photo[longitude]" value="{%=o.GPSLongitude?o.GPSLongitude:''%}"/>
-			         </div>
-						</div>
-
-					</div>
-				</form>
-			</div>
-		</script>
-
 		<script src="js/jquery-1.10.2.min.js"></script>
 		<script src="js/bootstrap.min.js"></script>
-		<script src="http://maps.google.com/maps/api/js?sensor=false&libraries=places&language=en" type="text/javascript"></script>
-		<script src="js/fileupload/vendor/jquery.ui.widget.js"></script>
-		<script src="js/fileupload/jquery.fileupload.js"></script>
-		<script src="js/fileupload/jquery.fileupload-process.js"></script>
-		<script src="js/fileupload/jquery.fileupload-image.js"></script>
-		<script src="js/exif.js"></script>
-		<script src="js/binaryajax.js"></script>
-		<script src="js/canvasResize.js"></script>
 		<script src="js/tmpl.min.js"></script>
 		<script src="js/jquery.resizeimagetoparent.min.js"></script>
-		<script src="js/select2.min.js"></script>
-		<script src="js/app.js"></script>
 		<script>
-			$(function () {
-				$(document).on('click', '#myTab a', function (e) {
-					e.preventDefault();
-					if (!$(this).closest('li').hasClass('active')) {
-						$(this).tab('show');
-						tabSelect($(this));
-					}
-				})
-			})
+			
 		</script>
-		<!--script src="js/live.js"></script-->
+		<script src="js/live.js"></script>
 	</body>
 </html>
