Nicer mobile grid

--- a/uploaded.html
+++ b/uploaded.html
@@ -37,10 +37,10 @@
 		</div>
 		
 		<script type="text/x-tmpl" id="tmpl-photoItem">
-			<div class="col-md-3 item">
+			<div class="col-md-3 col-xs-6 item">
 				<div class="panel panel-default">
 				  <div class="panel-body">
-				    <img class="img-rounded" src="{%= o.imageData %}" width="231"/>
+				    <img class="img-rounded" src="{%= o.imageData %}"/>
 				  </div>
 				  <div class="panel-footer">{%= o.filename%}</div>
 				</div>
