Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -34,7 +34,10 @@
 <h3>
 <a name="build-a-photo-uploader-with-500pxcom-inspired" class="anchor" href="#build-a-photo-uploader-with-500pxcom-inspired"><span class="octicon octicon-link"></span></a>Build a photo uploader with 500px.com-inspired.</h3>
 
-<p>Feel free to modify and re-use.</p>
+<p><img src="https://raw.github.com/mrhieu/500pxupload/b94f090ee11d6023d2eaae3fcd66f96bd696fad8/img/preview.jpg" alt="preview"></p>
+
+<h3>
+<a name="feel-free-to-modify-and-re-use" class="anchor" href="#feel-free-to-modify-and-re-use"><span class="octicon octicon-link"></span></a>Feel free to modify and re-use.</h3>
 
 <h2>
 <a name="feature" class="anchor" href="#feature"><span class="octicon octicon-link"></span></a>Feature</h2>
