--- a/demo/uploaded.html
+++ b/demo/uploaded.html
@@ -82,5 +82,26 @@
 			}();
 		</script>
 		<!--script src="js/live.js"></script-->
+		<!-- AddThis Smart Layers BEGIN -->
+		<!-- Go to http://www.addthis.com/get/smart-layers to customize -->
+		<script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-4e72fd7107058ce5"></script>
+		<script type="text/javascript">
+		  addthis.layers({
+		    'theme' : 'transparent',
+		    'share' : {
+		      'position' : 'right',
+		      'numPreferredServices' : 5
+		    }, 
+		    'follow' : {
+		      'services' : [
+		        {'service': 'facebook', 'id': 'mrhieu'},
+		        {'service': 'twitter', 'id': 'mrhieu'},
+		        {'service': 'linkedin', 'id': 'hieupv'},
+		        {'service': 'google_follow', 'id': '107139333698405248003/posts'}
+		      ]
+		    }   
+		  });
+		</script>
+		<!-- AddThis Smart Layers END -->
 	</body>
 </html>
