--- a/index.html
+++ b/index.html
@@ -1,34 +1,34 @@
 <!doctype html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>500pxupload by mrhieu</title>
+	<head>
+		<meta charset="utf-8">
+		<meta http-equiv="X-UA-Compatible" content="chrome=1">
+		<title>500pxupload by mrhieu</title>
 
-    <link rel="stylesheet" href="stylesheets/styles.css">
-    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-    <!--[if lt IE 9]>
-    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
-  </head>
-  <body>
-    <div class="wrapper">
-      <header>
-        <h1>500pxupload</h1>
-        <p>500px-like Photo Uploader</p>
+		<link rel="stylesheet" href="stylesheets/styles.css">
+		<link rel="stylesheet" href="stylesheets/pygment_trac.css">
+		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+		<!--[if lt IE 9]>
+		<script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+		<![endif]-->
+	</head>
+	<body>
+		<div class="wrapper">
+			<header>
+				<h1>500pxupload</h1>
+				<p>500px-like Photo Uploader</p>
 
-        <p class="view"><a href="https://github.com/mrhieu/500pxupload">View the Project on GitHub <small>mrhieu/500pxupload</small></a></p>
+				<p class="view"><a href="https://github.com/mrhieu/500pxupload">View the Project on GitHub <small>mrhieu/500pxupload</small></a></p>
 
 
-        <ul>
-          <li><a href="https://github.com/mrhieu/500pxupload/zipball/master">Download <strong>ZIP File</strong></a></li>
-          <li><a href="https://github.com/mrhieu/500pxupload/tarball/master">Download <strong>TAR Ball</strong></a></li>
-          <li><a href="https://github.com/mrhieu/500pxupload">View On <strong>GitHub</strong></a></li>
-        </ul>
-      </header>
-      <section>
-        <h1>
+				<ul>
+					<li><a href="https://github.com/mrhieu/500pxupload/zipball/master">Download <strong>ZIP File</strong></a></li>
+					<li><a href="https://github.com/mrhieu/500pxupload/tarball/master">Download <strong>TAR Ball</strong></a></li>
+					<li><a href="https://github.com/mrhieu/500pxupload">View On <strong>GitHub</strong></a></li>
+				</ul>
+			</header>
+			<section>
+				<h1>
 <a name="500px-like-photo-uploader" class="anchor" href="#500px-like-photo-uploader"><span class="octicon octicon-link"></span></a>500px-like Photo Uploader</h1>
 
 <h3>
@@ -83,23 +83,44 @@
 <ul>
 <li>Client-side crop image</li>
 </ul><p>Maintained by Hieu Pham (<a href="mailto:mr_hie@yahoo.com">mr_hie@yahoo.com</a> | <a href="https://github.com/mrhieu" class="user-mention">@mrhieu</a>)</p>
-      </section>
-      <footer>
-        <p>This project is maintained by <a href="https://github.com/mrhieu">mrhieu</a></p>
-        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
-      </footer>
-    </div>
-    <script src="javascripts/scale.fix.js"></script>
-              <script type="text/javascript">
-            var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
-            document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
-          </script>
-          <script type="text/javascript">
-            try {
-              var pageTracker = _gat._getTracker("UA-26188758-6");
-            pageTracker._trackPageview();
-            } catch(err) {}
-          </script>
-
-  </body>
+			</section>
+			<footer>
+				<p>This project is maintained by <a href="https://github.com/mrhieu">mrhieu</a></p>
+				<p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
+			</footer>
+		</div>
+		<script src="javascripts/scale.fix.js"></script>
+							<script type="text/javascript">
+						var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+						document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+					</script>
+					<script type="text/javascript">
+						try {
+							var pageTracker = _gat._getTracker("UA-26188758-6");
+						pageTracker._trackPageview();
+						} catch(err) {}
+					</script>
+					
+					<!-- AddThis Smart Layers BEGIN -->
+<!-- Go to http://www.addthis.com/get/smart-layers to customize -->
+<script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-4e72fd7107058ce5"></script>
+<script type="text/javascript">
+  addthis.layers({
+    'theme' : 'transparent',
+    'share' : {
+      'position' : 'right',
+      'numPreferredServices' : 5
+    }, 
+    'follow' : {
+      'services' : [
+        {'service': 'facebook', 'id': 'mrhieu'},
+        {'service': 'twitter', 'id': 'mrhieu'},
+        {'service': 'linkedin', 'id': 'hieupv'},
+        {'service': 'google_follow', 'id': '107139333698405248003/posts'}
+      ]
+    }   
+  });
+</script>
+<!-- AddThis Smart Layers END -->
+	</body>
 </html>
