Add Disqus widget

--- a/demo/index.html
+++ b/demo/index.html
@@ -47,7 +47,7 @@
 		
 		<!-- Drag zone -->
 		<div class="container text-center start-zone">
-			<form id="fileupload" action="server/post.php" method="POST" enctype="multipart/form-data">
+			<form id="fileupload" action="http://five00pxupload.herokuapp.com/server/post.php" method="POST" enctype="multipart/form-data">
 				<input type="file" id="input-browse" class="block-hide" multiple="multiple" name="files">
 				<p>Drag photos from your computer in here. Select as many as you want.</p>
 				<div class="help-block">Anyway, you can kill your browser with dropping 10 files in a row with 10MB each (o.O)</div>
