--- a/index.html
+++ b/index.html
@@ -34,13 +34,13 @@
 <h3>
 <a name="build-a-photo-uploader-with-500pxcom-inspired" class="anchor" href="#build-a-photo-uploader-with-500pxcom-inspired"><span class="octicon octicon-link"></span></a>Build a photo uploader with 500px.com-inspired.</h3>
 
-<p><img src="https://raw.github.com/mrhieu/500pxupload/b94f090ee11d6023d2eaae3fcd66f96bd696fad8/img/preview.jpg" alt="preview"></p>
+<p><a href="/500pxupload/demo"><img src="https://raw.github.com/mrhieu/500pxupload/b94f090ee11d6023d2eaae3fcd66f96bd696fad8/img/preview.jpg" alt="preview"></a></p>
 
 <h3>
 <a name="feel-free-to-modify-and-re-use" class="anchor" href="#feel-free-to-modify-and-re-use"><span class="octicon octicon-link"></span></a>Feel free to modify and re-use.</h3>
 
 <h3>
-<a name="see-a-demo-at-here-anyway-i-didnt-setup-server-side-for-public-access-any-ideas-" class="anchor" href="#see-a-demo-at-here-anyway-i-didnt-setup-server-side-for-public-access-any-ideas-"><span class="octicon octicon-link"></span></a>See a demo at <a href="http://mrhieu.github.io/500pxupload/demo">here</a>. Anyway, I didn't setup server-side for public access. Any ideas ?</h3>
+<a name="see-a-demo-at-here-anyway-i-didnt-setup-server-side-for-public-access-any-ideas-" class="anchor" href="#see-a-demo-at-here-anyway-i-didnt-setup-server-side-for-public-access-any-ideas-"><span class="octicon octicon-link"></span></a>See a demo <a href="/500pxupload/demo">here</a>.</h3>
 
 <h2>
 <a name="feature" class="anchor" href="#feature"><span class="octicon octicon-link"></span></a>Feature</h2>
@@ -83,6 +83,23 @@
 <ul>
 <li>Client-side crop image</li>
 </ul><p>Maintained by Hieu Pham (<a href="mailto:mr_hie@yahoo.com">mr_hie@yahoo.com</a> | <a href="https://github.com/mrhieu" class="user-mention">@mrhieu</a>)</p>
+
+ <div id="disqus_thread"></div>
+    <script type="text/javascript">
+        /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
+        var disqus_shortname = '500pxupload'; // required: replace example with your forum shortname
+
+        /* * * DON'T EDIT BELOW THIS LINE * * */
+        (function() {
+            var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
+            dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
+            (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
+        })();
+    </script>
+    <noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+    <a href="http://disqus.com" class="dsq-brlink">comments powered by <span class="logo-disqus">Disqus</span></a>
+    
+
 			</section>
 			<footer>
 				<p>This project is maintained by <a href="https://github.com/mrhieu">mrhieu</a></p>
